--- a/articles/index.yml
+++ b/articles/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.date: 02/27/2020
   featureFlags:
   - clicktale
-  ms.openlocfilehash: 525d39eb4170927ebbf2fdee9298921093ee2aef
-  ms.sourcegitcommit: 73ac360f37053a3321e8be23236b32d4f8fb30cf
+  ms.openlocfilehash: ca9b94c3f16f87d4c247f1c9bd7ebeccc0af6659
+  ms.sourcegitcommit: 877491bd46921c11dd478bd25fc718ceee2dcc08
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 06/30/2020
-  ms.locfileid: "85565589"
+  ms.lasthandoff: 07/01/2020
+  ms.locfileid: "85832757"
 highlightedContent:
   items:
   - title: Azure 开发人员入门指南
@@ -1104,7 +1104,7 @@ productDirectory:
     azureCategories:
     - networking
     url: firewall/index.yml
-  - title: Azure 防火墙管理器（预览版）
+  - title: Azure 防火墙管理器
     summary: 用于软件定义的全球分布式外围网络的中心网络安全策略和路由管理
     imageSrc: https://static.docs.com/ui/media/product/azure/firewall-manager.svg
     azureCategories:
@@ -1266,7 +1266,7 @@ tools:
     url: https://docs.microsoft.com/dotnet/azure/
   - title: JavaScript
     imageSrc: https://docs.microsoft.com/media/logos/logo_js.svg
-    url: https://docs.microsoft.com/azure/javascript/
+    url: https://docs.microsoft.com/azure/developer/javascript/
   - title: Java
     imageSrc: https://docs.microsoft.com/media/logos/logo_java.svg
     url: https://docs.microsoft.com/azure/developer/java/
