--- a/articles/advisor/toc.yml
+++ b/articles/advisor/toc.yml
@@ -11,6 +11,7 @@
         - name: Azure 门户
           href: advisor-alerts-portal.md
         - name: ARM 模板
+          displayName: Resource Manager
           href: advisor-alerts-arm.md
 - name: 教程
   items:
