--- a/articles/storage/tables/TOC.yml
+++ b/articles/storage/tables/TOC.yml
@@ -1,5 +1,5 @@
 - name: Azure 表存储文档
-  href: /azure/storage/
+  href: /azure/storage/tables/
 - name: 概述
   expanded: true
   items:
@@ -17,7 +17,7 @@
     - name: .NET
       href: /azure/cosmos-db/table-storage-how-to-use-dotnet
       maintainContext: true
-    - name: 'F#'
+    - name: F#
       href: 'https://docs.microsoft.com/dotnet/articles/fsharp/using-fsharp-on-azure/table-storage'
       maintainContext: true
     - name: Java
