--- a/articles/active-directory/saas-apps/toc.yml
+++ b/articles/active-directory/saas-apps/toc.yml
@@ -333,6 +333,8 @@
           href: clickup-productivity-platform-tutorial.md
         - name: 适用于 Microsoft Azure 的云管理门户
           href: newsignature-tutorial.md
+        - name: CloudCords
+          href: cloudcords-tutorial.md
         - name: Cloudmore
           href: cloudmore-tutorial.md
         - name: CloudPassage
@@ -1057,6 +1059,8 @@
           href: mozy-enterprise-tutorial.md
         - name: MS Azure SSO Access for Ethidex Compliance Office™
           href: ms-azure-sso-access-for-ethidex-compliance-office-tutorial.md
+        - name: MVISION Cloud Azure AD SSO 配置
+          href: skyhighnetworks-tutorial.md
         - name: MyAryaka
           href: myaryaka-tutorial.md
         - name: My Award Points Top Sub/Top Team
@@ -1409,6 +1413,8 @@
           href: segment-tutorial.md
         - name: Seismic
           href: seismic-tutorial.md
+        - name: SendSafely
+          href: sendsafely-tutorial.md
         - name: SensoScientific Wireless Temperature Monitoring System
           href: sensoscientific-tutorial.md
         - name: Sequr
@@ -1463,8 +1469,6 @@
           href: skills-workflow-tutorial.md
         - name: SkyDesk Email
           href: skydeskemail-tutorial.md
-        - name: Skyhigh Networks
-          href: skyhighnetworks-tutorial.md
         - name: SKYSITE
           href: skysite-tutorial.md
         - name: 适用于 Skytap 的单一登录
@@ -1667,6 +1671,8 @@
           href: veritas-tutorial.md
         - name: Verkada Command
           href: verkada-command-tutorial.md
+        - name: Verme
+          href: verme-tutorial.md
         - name: Versal
           href: versal-tutorial.md
         - name: Viareport (Europe)
