--- a/articles/cognitive-services/Computer-vision/toc.yml
+++ b/articles/cognitive-services/Computer-vision/toc.yml
@@ -49,7 +49,7 @@
               href: QuickStarts/node-thumb.md
             - name: Python
               href: QuickStarts/python-thumb.md
-        - name: 提取文本（计算机视觉 - 读取 API）
+        - name: 提取文本（读取 API）
           items:
             - name: C#
               href: QuickStarts/CSharp-hand-text.md
@@ -59,7 +59,7 @@
               href: QuickStarts/javascript-hand-text.md
             - name: Python
               href: QuickStarts/python-hand-text.md
-        - name: 提取印刷体文本 (OCR)
+        - name: 提取文本 (OCR API)
           items:
             - name: C#
               href: QuickStarts/CSharp-print-text.md
@@ -105,7 +105,7 @@
       href: concept-detecting-color-schemes.md
     - name: 智能裁剪的缩略图
       href: concept-generating-thumbnails.md
-    - name: 文本识别
+    - name: 光学字符识别 (OCR)
       href: concept-recognizing-text.md
     - name: 成人内容检测
       href: concept-detecting-adult-content.md
