--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -583,6 +583,8 @@
           href: monitor-visually.md
         - name: 使用 Azure Monitor 进行监视
           href: monitor-using-azure-monitor.md
+        - name: 使用 Azure Monitor 监视 SSIS
+          href: monitor-using-azure-monitor.md#monitor-ssis-operations-with-azure-monitor
         - name: 使用 SDK 进行监视
           href: monitor-programmatically.md
         - name: 监视集成运行时
