--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -112,6 +112,12 @@
               href: 'https://www.nuget.org/packages/Azure.DigitalTwins.Core'
             - name: .NET (C#) SDK - 源
               href: 'https://github.com/Azure/azure-sdk-for-net/tree/master/sdk/digitaltwins/Azure.DigitalTwins.Core'
+    - name: 数字孪生 CLI
+      items:
+        - name: 数字孪生 CLI 参考
+          href: /cli/azure/ext/azure-iot/dt?view=azure-cli-latest
+        - name: CLI 包
+          href: 'https://github.com/Azure/azure-iot-cli-extension/releases'
     - name: DTDL
       items:
         - name: DTDL v2 规范
@@ -126,12 +132,6 @@
           href: 'https://github.com/Azure/digital-twin-model-identifier'
     - name: Azure 工具
       items:
-        - name: Azure CLI 参考
-          href: /cli/azure/iot
-        - name: Azure IoT CLI 扩展参考
-          href: /cli/azure/ext/azure-iot/iot?view=azure-cli-latest
-        - name: Azure IoT CLI 扩展版本
-          href: 'https://github.com/Azure/azure-iot-cli-extension/releases'
         - name: Azure Cloud Shell
           href: 'https://shell.azure.com'
         - name: Azure PowerShell
