--- a/articles/search/index.yml
+++ b/articles/search/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: HeidiSteen
   ms.author: heidist
   ms.date: 02/25/2020
-  ms.openlocfilehash: ab3352dbd6631c0c86656764dac748eac10fa79b
-  ms.sourcegitcommit: b396c674aa8f66597fa2dd6d6ed200dd7f409915
-  ms.translationtype: HT
+  ms.openlocfilehash: f5acb693e758d3a574b799b2999e6d956aaf883c
+  ms.sourcegitcommit: 845a55e6c391c79d2c1585ac1625ea7dc953ea89
+  ms.translationtype: 
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/07/2020
-  ms.locfileid: "82890091"
+  ms.lasthandoff: 07/05/2020
+  ms.locfileid: "85954496"
 landingContent:
 - title: 关于认知搜索
   linkLists:
@@ -54,7 +54,7 @@ landingContent:
       url: search-create-service-portal.md
     - text: 创建索引
       url: search-get-started-portal.md
-    - text: 创建应用
+    - text: 创建演示应用
       url: search-create-app-portal.md
     - text: 从图像和应用文件中提取文本
       url: cognitive-search-quickstart-blob.md
