--- a/articles/active-directory/users-groups-roles/TOC.yml
+++ b/articles/active-directory/users-groups-roles/TOC.yml
@@ -58,6 +58,8 @@
           href: /azure/active-directory/fundamentals/active-directory-users-restore?context=azure/active-directory/users-groups-roles/context/ugr-context
         - name: 批量还原用户
           href: users-bulk-restore.md
+        - name: 撤消用户的访问权限
+          href: users-revoke-access.md
         - name: 关闭非托管目录下的帐户
           href: users-close-account.md
         - name: 添加 B2B 用户
