--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -16,8 +16,6 @@
       href: tutorial-access-private-cloud.md
     - name: 5 - 缩放私有云
       href: tutorial-scale-private-cloud.md
-    - name: 6 - 创建用于部署 VM 的内容库
-      href: tutorial-deploy-vm-content-library.md
 - name: 概念
   items:
     - name: 私有云和群集
@@ -30,8 +28,6 @@
       href: concepts-identity.md
     - name: 私有云升级
       href: concepts-upgrades.md
-    - name: 基于角色的访问控制
-      href: concepts-rbac.md
 - name: 操作指南
   items:
     - name: 设置 HCX
@@ -40,12 +36,20 @@
       href: manage-dhcp.md
     - name: 灾难恢复
       href: disaster-recovery.md
+    - name: 通过内容库部署 VM
+      href: deploy-vm-content-library.md
     - name: 用于 AVS 的 Azure 备份服务器
       items:
         - name: 设置用于 AVS 的 Azure 备份服务器
           href: set-up-mabs-for-avs.md
         - name: 使用 Azure 备份服务器备份 AVS VM
           href: backup-avs-vms-with-mabs.md
+    - name: Azure 本机集成
+      items:
+        - name: API 管理
+          href: concepts-api-management.md
+        - name: 中心和分支
+          href: concepts-avs-hub-and-spoke-integration.md
 - name: 参考
   items: null
 - name: 资源
