--- a/articles/iot-central/core/TOC.yml
+++ b/articles/iot-central/core/TOC.yml
@@ -133,6 +133,8 @@
               href: howto-use-app-templates.md
             - name: 监视应用程序运行状况
               href: howto-monitor-application-health.md
+            - name: 关于你的应用程序
+              href: howto-get-app-info.md
         - name: 从其他位置管理
           items:
             - name: 从 Azure 门户进行管理
