--- a/articles/site-reliability-engineering/index.yml
+++ b/articles/site-reliability-engineering/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: dnblankedelman
   ms.author: dnb
   ms.date: 02/18/2020
-  ms.openlocfilehash: 23d5b7226f3d5531ff1fa64e42776daa14186f56
-  ms.sourcegitcommit: 23604d54077318f34062099ed1128d447989eea8
-  ms.translationtype: HT
+  ms.openlocfilehash: e5c1ef5e84f0170927d7fcac65b594d44ed33b93
+  ms.sourcegitcommit: 877491bd46921c11dd478bd25fc718ceee2dcc08
+  ms.translationtype: 
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 06/20/2020
-  ms.locfileid: "85117890"
+  ms.lasthandoff: 07/01/2020
+  ms.locfileid: "85833428"
 highlightedContent:
   items:
   - title: SRE 简介：什么是 SRE？ (1/3)
@@ -57,6 +57,8 @@ productDirectory:
       text: 书籍
     - url: resources/events.md
       text: 事件
+    - url: articles/code.md
+      text: 常见问题解答：SRE 和编码
     - url: articles/devops.md
       text: 常见问题解答：SRE 和 DevOps
     - url: resources/links.md
