--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -109,6 +109,8 @@
           href: concepts-data-encryption-mysql.md
         - name: Azure AD 身份验证
           href: concepts-azure-ad-authentication.md
+        - name: 基础结构双重加密
+          href: concepts-infrastructure-double-encryption.md
         - name: 安全基线
           href: security-baseline.md
     - name: 业务连续性
@@ -276,6 +278,10 @@
           href: howto-data-encryption-cli.md
         - name: 数据加密验证
           href: howto-data-encryption-validation.md
+    - name: 基础结构双重加密
+      items:
+        - name: 配置基础结构双加密
+          href: howto-double-encryption.md
     - name: Azure AD 集成
       items:
         - name: 配置 Azure AD 集成
